Refactorización clases y entidad CuentaCategoria renombrada a UsuarioCategoria